tests/ui/runtime-storage-removed.stderr
error[E0432]: unresolved imports `hibana::runtime::Clock`, `hibana::runtime::CounterClock`, `hibana::runtime::RING_EVENTS`, `hibana::runtime::RuntimeStorage`
 --> tests/ui/runtime-storage-removed.rs:1:23
  |
1 | use hibana::runtime::{Clock, CounterClock, RING_EVENTS, RuntimeStorage};
  |                       ^^^^^  ^^^^^^^^^^^^  ^^^^^^^^^^^  ^^^^^^^^^^^^^^ no `RuntimeStorage` in `runtime`
  |                       |      |             |
  |                       |      |             no `RING_EVENTS` in `runtime`
  |                       |      no `CounterClock` in `runtime`
  |                       no `Clock` in `runtime`
